Dibuat menggunakan Colab

--- a/2_Tipe_variabel_Faza_Sanda_XI_I.ipynb
+++ b/2_Tipe_variabel_Faza_Sanda_XI_I.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhNbswJlPfjWzi39Rcq1Do",
+      "authorship_tag": "ABX9TyMLPjnrrn+bbZkD20cTRs8r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1174,6 +1174,412 @@
             "masukkan jari jari kerucut:7\n",
             " masukkan tinggi kerucut:10\n",
             " volume kerucut adalah 512.8666666666666 cm^3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## operator perbandingan"
+      ],
+      "metadata": {
+        "id": "9lkUyd2QoxpN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8<5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D5HwLUGUo0li",
+        "outputId": "da339b77-262e-46b0-e563-ce1772b4fdf5"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8>5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yk_VLlrBo2Hd",
+        "outputId": "5657c659-4442-47a7-ad79-8bf44abeaa48"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(9>=9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6psUQIXo3ko",
+        "outputId": "d7cead57-8822-41f6-e5ad-a13e43f9b5f7"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8 == 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yaQlfsjEo5Qd",
+        "outputId": "1e6d7a53-dd73-4d8a-c9d8-e894de2bcb8d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print( 8 ==8)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eGvEc8Qoo-YY",
+        "outputId": "7a6f0135-aaee-4e25-b91b-7a36928adbe3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(1 != 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HVwMafHvpABN",
+        "outputId": "c003ffbd-1bf7-4d8c-c92c-153b9f9b2337"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=10\n",
+        "b=20\n",
+        "c=30\n",
+        "print(a>c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kh8QrhYtpFrl",
+        "outputId": "b54fd449-98cb-43f3-cab4-99faaeab2f32"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a>30)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "52wjCcA2pHvY",
+        "outputId": "c8c572b0-457f-4a7e-a68f-3f74b38f9bd3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nilai_kka = 75\n",
+        "kkm_kka = 80\n",
+        "print(nilai_kka > kkm_kka)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rWTO17hcpKLa",
+        "outputId": "755c97ef-932d-40c8-ee2f-1957fb4c2095"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qK6gMpGzpO31"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## operator logika"
+      ],
+      "metadata": {
+        "id": "N_HoqBhkpSpk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " print(8>7 and 5>6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jf9UgvewpWKo",
+        "outputId": "8d41faf0-ed8c-4fff-cd1d-2f26be14a72a"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8>7 and 5<6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lec1NO_GpcSw",
+        "outputId": "afefc85a-c6d2-412c-8629-d4edab9a82c2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(8>7 or 5>6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3N6xbEj3phQU",
+        "outputId": "106499e4-81ce-40a1-de09-37d90654e72a"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(not(8>7 or 5>6))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ky8jCw6xpjtC",
+        "outputId": "1ca95809-6b5c-4528-d7ce-c17338d9d74a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(not (8>=9 or 9!=8))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c-78isCzplEa",
+        "outputId": "6256b7bf-000e-471c-c485-5c78a772390c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " iq_min = 125\n",
+        "tinggi_min = 165\n",
+        "print(125 >=iq_min\n",
+        "and\n",
+        "170 >= tinggi_min)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FHZAIxq2pr65",
+        "outputId": "77675b7d-aec9-40a7-9510-2a73215b7d74"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iq_faza = 200\n",
+        "tinggi_faza = 170\n",
+        "print(iq_faza >= iq_min and tinggi_faza >= tinggi_min)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_7VH6rFoptxj",
+        "outputId": "6e0fff01-102f-447a-f9c1-3db0a9df4195"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
           ]
         }
       ]
