Dibuat menggunakan Colab

--- a/2_Tipe_variabel_Faza_Sanda_XI_I.ipynb
+++ b/2_Tipe_variabel_Faza_Sanda_XI_I.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLPjnrrn+bbZkD20cTRs8r",
+      "authorship_tag": "ABX9TyNA0xOhJSsyB41z6WUfqUGM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1199,7 +1199,7 @@
         "id": "D5HwLUGUo0li",
         "outputId": "da339b77-262e-46b0-e563-ce1772b4fdf5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,7 +1222,7 @@
         "id": "yk_VLlrBo2Hd",
         "outputId": "5657c659-4442-47a7-ad79-8bf44abeaa48"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,7 +1245,7 @@
         "id": "L6psUQIXo3ko",
         "outputId": "d7cead57-8822-41f6-e5ad-a13e43f9b5f7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,7 +1268,7 @@
         "id": "yaQlfsjEo5Qd",
         "outputId": "1e6d7a53-dd73-4d8a-c9d8-e894de2bcb8d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,7 +1291,7 @@
         "id": "eGvEc8Qoo-YY",
         "outputId": "7a6f0135-aaee-4e25-b91b-7a36928adbe3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1314,7 +1314,7 @@
         "id": "HVwMafHvpABN",
         "outputId": "c003ffbd-1bf7-4d8c-c92c-153b9f9b2337"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1340,7 +1340,7 @@
         "id": "Kh8QrhYtpFrl",
         "outputId": "b54fd449-98cb-43f3-cab4-99faaeab2f32"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1363,7 @@
         "id": "52wjCcA2pHvY",
         "outputId": "c8c572b0-457f-4a7e-a68f-3f74b38f9bd3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1388,7 @@
         "id": "rWTO17hcpKLa",
         "outputId": "755c97ef-932d-40c8-ee2f-1957fb4c2095"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1429,7 @@
         "id": "jf9UgvewpWKo",
         "outputId": "8d41faf0-ed8c-4fff-cd1d-2f26be14a72a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1452,7 @@
         "id": "lec1NO_GpcSw",
         "outputId": "afefc85a-c6d2-412c-8629-d4edab9a82c2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1475,7 +1475,7 @@
         "id": "3N6xbEj3phQU",
         "outputId": "106499e4-81ce-40a1-de09-37d90654e72a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1498,7 +1498,7 @@
         "id": "ky8jCw6xpjtC",
         "outputId": "1ca95809-6b5c-4528-d7ce-c17338d9d74a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1521,7 +1521,7 @@
         "id": "c-78isCzplEa",
         "outputId": "6256b7bf-000e-471c-c485-5c78a772390c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1548,7 +1548,7 @@
         "id": "FHZAIxq2pr65",
         "outputId": "77675b7d-aec9-40a7-9510-2a73215b7d74"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,38 @@
         "id": "_7VH6rFoptxj",
         "outputId": "6e0fff01-102f-447a-f9c1-3db0a9df4195"
       },
-      "execution_count": 19,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tinggi_min = 165\n",
+        "berat_min  = 50\n",
+        "umur_max   = 25\n",
+        "\n",
+        "tinggi_farel = 170\n",
+        "berat_farel  = 55\n",
+        "umur_farel   = 23\n",
+        "\n",
+        "print(tinggi_farel >= tinggi_min and berat_farel >= berat_min and umur_farel <= umur_max)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4UoZA-BZtapR",
+        "outputId": "5e537efc-1e95-4668-db9b-9678f589d24f"
+      },
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
